Update the directory of the Terminal Panel if the current URL is not a "file:" URL, but is nevertheless local (e.g., "desktop:").

This fix is also applied to the new "Open external Terminal" action
which will be in KDE 4.3.

BUG: 167810 

svn path=/trunk/KDE/kdebase/apps/; revision=969265